# OpenCV_Test

./: .gitignore  CMakeLists.txt  PrintVersion.cc  README.md
